Changes for 2.0.15rc1

New features:

Bug fixes:
........S. [ZBX-9126] fixed processing of trigger/graph prototypes in case when all item prototypes in trigger/graph prototypes were changed (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.14

2.0.14rc1 was released as 2.0.14 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.14rc1

New features:
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)
A.F....... [ZBX-1357] updated Italian, Polish and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8582] fixed SQL injection vulnerability in bar graphs (Ivo, Pavels)
..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
........S. [ZBX-8952] fixed bug where an action condition of matching parent templates of a trigger worked with only the first template (Juris)
.D........ [ZBX-6542] updated description of HousekeepingFrequency parameter in the default server and proxy configuration files (Sasha)
.......PS. [ZBX-8833] fixed dynamic SNMP item cache working incorrectly for hosts with multiple SNMP interfaces (asaveljevs)
........S. [ZBX-8948] fixed memory leak when checking Template condition during action processing (wiper)
A......... [ZBX-6174] fixed "skipDependent" option in trigger.get API call to correctly handle cases when triggers on which they depend are disabled (Krists)
........S. [ZBX-8754] fixed crash in escalator when processing an alert without an user, but with a media type set (wiper)
..F....... [ZBX-8693] fixed "Add" button in Configuration->Triggers->Create Trigger->Add for IE11 (arvids)
........S. [ZBX-8815] fixed adding of host groups to the host by discovery action (Sasha)